Fix CSS for collapsable.

--- a/pysaurus/interface/webtop/web/css/collapsable.css
+++ b/pysaurus/interface/webtop/web/css/collapsable.css
@@ -1,29 +1,29 @@
 .collapsable {}
-.collapsable .header {
+.collapsable > .header {
     cursor: pointer;
     border: 1px solid rgba(240, 240, 240, 0.5);
     background: linear-gradient(rgba(240, 240, 240, 0.5), rgba(240, 240, 240, 0.5), rgba(220, 220, 220, 0.5));
     padding-left: 0.2em;
     padding-right: 0.2em;
 }
-.collapsable .header:hover {
+.collapsable > .header:hover {
     background: linear-gradient(rgba(230, 230, 230, 0.5), rgba(230, 230, 230, 0.5), rgba(210, 210, 210, 0.5));
 }
-.collapsable .header .title {
+.collapsable > .header > .title {
     font-weight: bold;
     text-align: center;
     flex-grow: 1;
 }
-.collapsable .header .icon {
+.collapsable > .header > .icon {
     font-size: 0.8em;
 }
-.collapsable .content {
+.collapsable > .content {
     padding-top: 0.5em;
     padding-bottom: 0.5em;
 }
 
 .stack {}
-.stack .header {
+.stack > .header {
     cursor: pointer;
     border-top: 1px solid rgb(210, 210, 210);
     border-bottom: 1px solid rgb(210, 210, 210);
@@ -31,19 +31,19 @@
     width: 100%;
     flex-shrink: 0;
 }
-.stack .header:hover {
+.stack > .header:hover {
     background: linear-gradient(rgb(230, 230, 230), rgb(230, 230, 230), rgb(210, 210, 210));
 }
-.stack .header > div {
+.stack > .header > div {
     padding: 0.2em;
 }
-.stack .header > .title {
+.stack > .header > .title {
     flex-grow: 1;
 }
-.stack .header > .icon {
+.stack > .header > .icon {
     font-size: 0.8em;
 }
-.stack .content {
+.stack > .content {
     background-color: white;
     position: relative;
 }
